After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 340847 - crash when changing resolution
crash when changing resolution
Status: RESOLVED FIXED
Product: metacity
Classification: Other
Component: general
unspecified
Other All
: Normal major
: ---
Assigned To: Metacity maintainers list
Metacity maintainers list
Depends on:
Blocks:
 
 
Reported: 2006-05-06 17:44 UTC by Jean-Yves Lefort
Modified: 2006-05-15 18:38 UTC
See Also:
GNOME target: ---
GNOME version: 2.13/2.14


Attachments
fix (816 bytes, patch)
2006-05-06 17:44 UTC, Jean-Yves Lefort
committed Details | Review

Description Jean-Yves Lefort 2006-05-06 17:44:16 UTC
Because in workspace.c you allocate an array of size screen->n_xinerama_infos, then change screen->n_xinerama_infos, then try to free the array in meta_workspace_invalidate_work_area(). I fix this by calling meta_workspace_invalidate_work_area() before changing n_xinerama_infos.
Comment 1 Jean-Yves Lefort 2006-05-06 17:44:55 UTC
Created attachment 64930 [details] [review]
fix
Comment 2 Elijah Newren 2006-05-06 19:38:08 UTC
Looks good for both HEAD and the gnome-2-14 branch, thanks.