Fix a crash that occurred when changing the screen resolution.

GNOME Bugzilla:	http://bugzilla.gnome.org/show_bug.cgi?id=340847